--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="header">
             <h1>🚀 Blue-Green Deployment</h1>
-            <p>Jenkins + Kubernetes Zero-Downtime Deployment Strategy</p>
+            <p>CI CD  on GCP Zero-Downtime Deployment Strategy</p>
         </div>
 
         <div class="content">
